<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_profile" >
        <EditTextPreference
            android:key="user_name"
            android:title="@string/user_name" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_car" >
        <CheckBoxPreference
            android:key="car"
            android:summaryOff="@string/without_car"
            android:summaryOn="@string/with_car"
            android:title="@string/car" >
        </CheckBoxPreference>

        <ListPreference
            android:title="Nombre de places"
            android:entries="@array/seats_array"
            android:entryValues="@array/seats_array"
            android:key="pref_list_seats" />
    </PreferenceCategory>

</PreferenceScreen>